--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.11",
+    "moment": "^2.26.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
